# cv_scribble_diffusion

./: .gitignore  LICENSE  README.md  animator.py  canvas.py  config.py  debug.py  functions_diffusion_image_s.py  generation.py  main.py  pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt  reveal.py  run.bat  runtime_logging.py  ui.py
src/cv_scribble_diffusion/: __init__.py  __main__.py  config.py
src/cv_scribble_diffusion/app/: __init__.py  app.py  startup.py
src/cv_scribble_diffusion/generation/: __init__.py  inputs.py  pipeline.py  reveal.py
src/cv_scribble_diffusion/infra/: __init__.py  debug.py  runtime_logging.py
src/cv_scribble_diffusion/ui/: __init__.py  animator.py  canvas.py  overlay.py  windowing.py
src/cv_scribble_diffusion/utils/: __init__.py  colorspace.py
tests/: conftest.py  test_animator.py  test_app_undo.py  test_canvas.py  test_colorspace.py  test_config.py  test_crop.py  test_debug.py  test_generation.py  test_integration.py  test_packaging.py  test_pipeline.py  test_reveal.py  test_runtime_logging.py  test_startup_progress.py  test_ui.py  test_windowing.py
